--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,4 @@
+
 <div class="py-5">
   <div class="row">
     <div class="col-md-6 mx-auto">
@@ -11,14 +12,15 @@
         <div class="card-body">
           <form class="form">
             <div class="form-group">
-              <label for="email">Email</label>
-              <input [(ngModel)] = "registerUserData.email" name="email"  type="text"  class="form-control rounded-0" required>
+              <label for="uname1">Username</label>
+              <input type="text" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0" required>
             </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="password" [(ngModel)]= "registerUserData.password" name="password" class="form-control rounded-0"  required>
+              <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0"  required>
             </div>
-            <button type="button" (click)= "registerUser()" class="btn btn-primary float-right">Register</button>
+            <br>
+            <button type="button" (click)="registerUser()" class="btn btn-primary float-right">Register</button>
           </form>
         </div>
         <!--/card-block-->
