--- a/src/app/bulletin/bulletin.component.html
+++ b/src/app/bulletin/bulletin.component.html
@@ -1,1 +1,14 @@
-<p>bulletin works!</p>
+<div class="row mt-5">
+  <div class="col-md-4 mb-3" *ngFor="let document of documents">
+    <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title">{{document.name}}</h5>
+        <p class="card-text">{{document.description}}</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+      <div class="card-footer text-muted">
+        {{document.date | date:'shortDate'}}
+      </div>
+    </div>
+  </div>
+</div>
