--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,17 +9,17 @@
           <h3 class="mb-0">Login</h3>
         </div>
         <div class="card-body">
-          <form class="form">
+          <form #logForm="ngForm" (ngSubmit)="loginUser(logForm)" class="form" novalidate>
             <div class="form-group">
               <label for="uname1">Username</label>
-              <input type="text" [(ngModel)]="loginUserData.email" name="email" class="form-control rounded-0" required>
+              <input type="email" [(ngModel)]="loginUserData.email" name="email" class="form-control rounded-0" #email="ngModel" required>
             </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="password" [(ngModel)]="loginUserData.password" name="password" class="form-control rounded-0"  required>
+              <input type="password" [(ngModel)]="loginUserData.password" name="password" class="form-control rounded-0" minlength="6"  #password="ngModel" required>
             </div>
             <br>
-            <button type="button" (click)="loginUser()" class="btn btn-primary float-right">Login</button>
+            <input type="submit" value="Login"  class="btn btn-primary float-right"/>
           </form>
         </div>
         <!--/card-block-->
