--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,19 +8,22 @@
       <div class="card rounded-0">
         <div class="card-header">
           <h3 class="mb-0">Register</h3>
+          <div *ngIf="regForm.invalid && !regForm.untouched" >
+            <p>Please ensure the correct credentials are entered</p>
+          </div>
         </div>
         <div class="card-body">
-          <form class="form">
+          <form #regForm="ngForm" (ngSubmit)="registerUser(regForm)" class="form"  novalidate>
             <div class="form-group">
               <label for="uname1">Username</label>
-              <input type="text" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0" required>
+              <input type="email" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0" #email="ngModel" required>
             </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0"  required>
+              <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0" minlength="6"  #password="ngModel" required>
             </div>
             <br>
-            <button type="button" (click)="registerUser()" class="btn btn-primary float-right">Register</button>
+            <input type="submit" value="Login"  class="btn btn-primary float-right"/>
           </form>
         </div>
         <!--/card-block-->
@@ -28,6 +31,7 @@
       <!-- /form card login -->
 
     </div>
+
 
 
   </div>
