--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,23 +8,67 @@
       <div class="card rounded-0">
         <div class="card-header">
           <h3 class="mb-0">Register</h3>
-          <div *ngIf="regForm.invalid && !regForm.untouched" >
-            <p>Please ensure the correct credentials are entered</p>
-          </div>
+       <!--    <div *ngIf="regForm.invalid && !regForm.untouched" >
+            <p>Please ensure all the correct credentials are entered</p>
+          </div> -->
         </div>
         <div class="card-body">
           <form #regForm="ngForm" (ngSubmit)="registerUser(regForm)" class="form"  novalidate>
-            <div class="form-group">
-              <label for="uname1">Username</label>
-              <input type="email" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0" #email="ngModel" required>
+            <div class="form-group" [class.has-error]="email.invalid && email.touched">
+              <label for="email" class="control-label">Email</label>
+              <input required pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"
+                     id="email" type="text" class="form-control" name="email"
+                     [(ngModel)]="registerUserData.email" #email="ngModel">
+              <span class="help-block" *ngIf="email.errors?.required && email.touched">
+                <p>Email is required</p>
+              </span>
+              <span class="help-block" *ngIf="email.errors?.pattern && email.touched">
+                <p>Email is Invalid</p>
+              </span>
             </div>
-            <div class="form-group">
-              <label>Password</label>
-              <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0" minlength="6"  #password="ngModel" required>
+            <div class="form-group" [class.has-error]="number.invalid && number.touched">
+              <label for="number" class="control-label">Cell Phone Number</label>
+              <input required pattern="^(\+27|0)[6-8][0-9]{8}$"
+                     id="number" type="text" class="form-control" name="number"
+                     [(ngModel)]="registerUserData.number" #number="ngModel">
+              <span class="help-block" *ngIf="number.errors?.required && number.touched">
+                <p>Contact Number is required</p>
+              </span>
+              <span class="help-block" *ngIf="number.errors?.pattern && number.touched">
+                <p>Contact Number is Invalid</p>
+              </span>
+            </div>
+            <div class="form-group" [class.has-error]="password.invalid && password.touched">
+              <label for="password" class="control-label">Password</label>
+              <input required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+                     id="password" type="password" class="form-control" name="password"
+                     [(ngModel)]="registerUserData.password" #password="ngModel">
+              <span class="help-block" *ngIf="password.errors?.required && password.touched">
+                <p>password is required</p>
+              </span>
+              <span class="help-block" *ngIf="password.errors?.pattern && password.touched">
+                <p>Password should be a minimum of 8 characters and contain at least 1 number</p>
+              </span>
+            </div>
+
+            <div class="form-group" [class.has-error]="confirmPassword.invalid && confirmPassword.touched">
+              <label for="confirmPassword" class="control-label">Confirm Password</label>
+              <input required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+                     id="confirmPassword" type="password" class="form-control" name="confirmPassword"
+                     [(ngModel)]="registerUserData.confirmPassword" #confirmPassword="ngModel">
+              <span class="help-block" *ngIf="confirmPassword.errors?.required && confirmPassword.touched">
+                <p>password is required</p>
+              </span>
+              <span class="help-block" *ngIf="confirmPassword.value != password.value && confirmPassword.touched">
+                <p>Passwords should match</p>
+              </span>
+
             </div>
             <br>
             <input type="submit" value="Login"  class="btn btn-primary float-right"/>
           </form>
+
+
         </div>
         <!--/card-block-->
       </div>
