--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,14 +13,29 @@
         </div>
         <div class="card-body">
           <form #logForm="ngForm" (ngSubmit)="loginUser(logForm)" class="form" novalidate>
-            <div class="form-group">
-              <label for="uname1">Username</label>
-              <input type="email" [(ngModel)]="loginUserData.email" name="email" class="form-control rounded-0" #email="ngModel" required>
+            <div class="form-group" [class.has-error]="email.invalid && email.touched">
+              <label for="email" class="control-label">Email</label>
+              <input required pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"
+                     id="email" type="text" class="form-control" name="email"
+                     [(ngModel)]="loginUserData.email" #email="ngModel">
+              <span class="help-block" *ngIf="email.errors?.required && email.touched">
+                <p>Email is required</p>
+              </span>
+              <span class="help-block" *ngIf="email.errors?.pattern && email.touched">
+                <p>Email is Invalid</p>
+              </span>
             </div>
-            <div class="form-group">
-              <label>Password</label>
-              <input type="password" [(ngModel)]="loginUserData.password" name="password" class="form-control rounded-0" minlength="6"  #password="ngModel" required>
+            <div class="form-group" [class.has-error]="password.invalid && password.touched">
+              <label for="password" class="control-label">Password</label>
+              <input required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+                     id="password" type="password" class="form-control" name="password"
+                     [(ngModel)]="loginUserData.password" #password="ngModel">
+              <span class="help-block" *ngIf="password.errors?.required && password.touched">
+                <p>password is required</p>
+              </span>
+              
             </div>
+
             <br>
             <input type="submit" value="Login"  class="btn btn-primary float-right"/>
           </form>
