--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,10 +19,10 @@
                      id="email" type="text" class="form-control" name="email"
                      [(ngModel)]="loginUserData.email" #email="ngModel">
               <span class="help-block" *ngIf="email.errors?.required && email.touched">
-                <p>Email is required</p>
+                <p>{{requiredEmailError}}</p>
               </span>
               <span class="help-block" *ngIf="email.errors?.pattern && email.touched">
-                <p>Email is Invalid</p>
+                <p>{{invalidEmailError}}</p>
               </span>
             </div>
             <div class="form-group" [class.has-error]="password.invalid && password.touched">
@@ -31,9 +31,9 @@
                      id="password" type="password" class="form-control" name="password"
                      [(ngModel)]="loginUserData.password" #password="ngModel">
               <span class="help-block" *ngIf="password.errors?.required && password.touched">
-                <p>password is required</p>
+                <p>{{passwordError}}</p>
               </span>
-              
+
             </div>
 
             <br>
