--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,9 +7,7 @@
       <div class="card rounded-0">
         <div class="card-header">
           <h3 class="mb-0">Register</h3>
-          <!--    <div *ngIf="regForm.invalid && !regForm.untouched" >
-            <p>Please ensure all the correct credentials are entered</p>
-          </div> -->
+         
         </div>
         <div class="card-body">
           <form #regForm="ngForm" (ngSubmit)="registerUser(regForm)" class="form" novalidate>
@@ -18,10 +16,10 @@
               <input required pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$" id="email" type="text"
                 class="form-control" name="email" [(ngModel)]="registerUserData.email" #email="ngModel">
               <span class="help-block" *ngIf="email.errors?.required && email.touched">
-                <p>Email is required</p>
+                <p>{{requiredEmailError}}</p>
               </span>
               <span class="help-block" *ngIf="email.errors?.pattern && email.touched">
-                <p>Email is Invalid</p>
+                <p>{{invalidEmailError}}</p>
               </span>
             </div>
             <div class="form-group" [class.has-error]="number.invalid && number.touched">
@@ -29,10 +27,10 @@
               <input required pattern="^(\+27|0)[6-8][0-9]{8}$" id="number" type="text" class="form-control"
                 name="number" [(ngModel)]="registerUserData.number" #number="ngModel">
               <span class="help-block" *ngIf="number.errors?.required && number.touched">
-                <p>Contact Number is required</p>
+                <p>{{requiredContactError}}</p>
               </span>
               <span class="help-block" *ngIf="number.errors?.pattern && number.touched">
-                <p>Contact Number is Invalid</p>
+                <p>{{invalidContactError}}</p>
               </span>
             </div>
             <div class="form-group" [class.has-error]="password.invalid && password.touched">
@@ -40,10 +38,10 @@
               <input required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" id="password" type="password"
                 class="form-control" name="password" [(ngModel)]="registerUserData.password" #password="ngModel">
               <span class="help-block" *ngIf="password.errors?.required && password.touched">
-                <p>password is required</p>
+                <p>{{passwordError}}</p>
               </span>
               <span class="help-block" *ngIf="password.errors?.pattern && password.touched">
-                <p>Password should be a minimum of 8 characters and contain at least 1 number</p>
+                <p>{{invalidPasswordError}}</p>
               </span>
             </div>
             <div class="form-group" [class.has-error]="confirmPassword.invalid && confirmPassword.touched">
@@ -52,10 +50,10 @@
                 class="form-control" name="confirmPassword" [(ngModel)]="registerUserData.confirmPassword"
                 #confirmPassword="ngModel">
               <span class="help-block" *ngIf="confirmPassword.errors?.required && confirmPassword.touched">
-                <p>password is required</p>
+                <p>{{passwordError}}</p>
               </span>
               <span class="help-block" *ngIf="confirmPassword.value != password.value && confirmPassword.touched">
-                <p>Passwords should match</p>
+                <p>{{nonMatchError}}</p>
               </span>
 
             </div>
