--- a/src/app/bulletin/bulletin.component.html
+++ b/src/app/bulletin/bulletin.component.html
@@ -1,10 +1,17 @@
-<div class="row mt-5">
+<div class="row mt-4">
+  <form (ngSubmit)="create()">
+    <input type="submit" value="Create Document" class="btn btn-success float-right" />
+  </form>
+</div>
+
+<div class="row mt-2">
+
   <div class="col-md-4 mb-3" *ngFor="let document of documents">
     <div class="card text-center">
       <div class="card-body">
         <h5 class="card-title">{{document.name}}</h5>
         <p class="card-text">{{document.description}}</p>
-        <a href="#" class="btn btn-primary">Download</a>
+        <a href="#" class="btn btn-outline-primary">Download</a>
       </div>
       <div class="card-footer text-muted">
         {{document.date | date:'shortDate'}}
