--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,1 +1,60 @@
-<p>create works!</p>
+<div class="py-5">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <span class="anchor" id="formLogin"></span>
+
+      <!-- form card login -->
+      <div class="card rounded-0">
+        <div class="card-header">
+          <h3 class="mb-0">Create a Document</h3>
+
+        </div>
+        <div class="card-body">
+          <form #createForm="ngForm" (ngSubmit)="createDocument(createForm)" class="form" novalidate>
+
+
+            <div class="form-group" [class.has-error]="title.invalid && title.touched">
+              <label for="title" class="control-label">Document Title</label>
+              <input required pattern="^[\w ]+$" id="title" type="text"
+                class="form-control" name="title" [(ngModel)]="createDocumentData.title" #title="ngModel">
+              <span class="help-block" *ngIf="title.errors?.required && title.touched">
+                <p>{{requiredTitleError}}</p>
+              </span>
+              <span class="help-block" *ngIf="title.errors?.pattern && title.touched">
+                <p>{{invalidTitleError}}</p>
+              </span>
+            </div>
+
+
+            <div class="form-group" [class.has-error]="details.invalid && details.touched">
+              <label for="details" class="control-label">Document Details</label>
+
+              <input required pattern="^(\+27|0)[6-8][0-9]{8}$" id="details" type="text" class="form-control"
+                name="details" [(ngModel)]="createDocumentData.details" #details="ngModel" >
+              <span class="help-block" *ngIf="details.errors?.required && details.touched">
+                <p>{{requiredDetailsError}}</p>
+              </span>
+              <span class="help-block" *ngIf="details.errors?.pattern && details.touched">
+                <p>{{invalidDetailsError}}</p>
+              </span>
+            </div>
+
+
+
+
+            <br>
+            <input type="submit" value="Submit" class="btn btn-primary float-right" />
+          </form>
+
+
+        </div>
+        <!--/card-block-->
+      </div>
+      <!-- /form card login -->
+
+    </div>
+
+
+
+  </div>
+</div>
