--- a/src/app/bulletin/bulletin.component.html
+++ b/src/app/bulletin/bulletin.component.html
@@ -11,7 +11,11 @@
       <div class="card-body">
         <h5 class="card-title">{{document.name}}</h5>
         <p class="card-text">{{document.description}}</p>
-        <a href="#" class="btn btn-outline-primary">Download</a>
+
+        <a  class="btn btn-outline-primary">View</a>
+
+        <div class="divider"></div>
+        <a href="#" class="btn btn-outline-danger">Delete</a>
       </div>
       <div class="card-footer text-muted">
         {{document.date | date:'shortDate'}}
