--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,7 +7,7 @@
       <div class="card rounded-0">
         <div class="card-header">
           <h3 class="mb-0">Register</h3>
-         
+
         </div>
         <div class="card-body">
           <form #regForm="ngForm" (ngSubmit)="registerUser(regForm)" class="form" novalidate>
@@ -57,8 +57,20 @@
               </span>
 
             </div>
+
+            <div>
+
+              <input required  id="adminUser" type="checkbox"
+               name="adminUser" [(ngModel)]="registerUserData.adminUser"
+                #userType="ngModel">
+                <div class="divider"></div>
+                <label for="adminUser">Admin User</label>
+
+
+
+            </div>
             <br>
-            <input type="submit" value="Login" class="btn btn-primary float-right" />
+            <input type="submit" value="Register Account" class="btn btn-primary float-right" />
           </form>
 
 
