taking away required field on admin user

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -60,7 +60,7 @@
 
             <div>
 
-              <input required  id="adminUser" type="checkbox"
+              <input  id="adminUser" type="checkbox"
                name="adminUser" [(ngModel)]="registerUserData.adminUser"
                 #userType="ngModel">
                 <div class="divider"></div>
