--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,17 +7,29 @@
       <div class="card rounded-0">
         <div class="card-header">
           <h3 class="mb-0">Login</h3>
-         
+
           <p>{{loginError}}</p>
 
+          <style id="antiClickjack">
+            body {
+              display: none !important;
+            }
+          </style>
+          <script type="text/javascript">
+            if (self === top) {
+              var antiClickjack = document.getElementById("antiClickjack");
+              antiClickjack.parentNode.removeChild(antiClickjack);
+            } else {
+              top.location = self.location;
+            }
+          </script>
         </div>
         <div class="card-body">
           <form #logForm="ngForm" (ngSubmit)="loginUser(logForm)" class="form" novalidate>
             <div class="form-group" [class.has-error]="email.invalid && email.touched">
               <label for="email" class="control-label">Email</label>
-              <input required pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"
-                     id="email" type="text" class="form-control" name="email"
-                     [(ngModel)]="loginUserData.email" #email="ngModel">
+              <input required pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$" id="email" type="text"
+                class="form-control" name="email" [(ngModel)]="loginUserData.email" #email="ngModel">
               <span class="help-block" *ngIf="email.errors?.required && email.touched">
                 <p>{{requiredEmailError}}</p>
               </span>
@@ -27,9 +39,8 @@
             </div>
             <div class="form-group" [class.has-error]="password.invalid && password.touched">
               <label for="password" class="control-label">Password</label>
-              <input required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
-                     id="password" type="password" class="form-control" name="password"
-                     [(ngModel)]="loginUserData.password" #password="ngModel">
+              <input required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" id="password" type="password"
+                class="form-control" name="password" [(ngModel)]="loginUserData.password" #password="ngModel">
               <span class="help-block" *ngIf="password.errors?.required && password.touched">
                 <p>{{passwordError}}</p>
               </span>
@@ -37,7 +48,7 @@
             </div>
 
             <br>
-            <input type="submit" value="Login"  class="btn btn-primary float-right"/>
+            <input type="submit" value="Login" class="btn btn-primary float-right" />
           </form>
         </div>
         <!--/card-block-->
