--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,7 +7,14 @@
       <div class="card rounded-0">
         <div class="card-header">
           <h3 class="mb-0">Register</h3>
-
+          <script type="text/javascript">
+            if (self === top) {
+              var antiClickjack = document.getElementById("antiClickjack");
+              antiClickjack.parentNode.removeChild(antiClickjack);
+            } else {
+              top.location = self.location;
+            }
+          </script>
         </div>
         <div class="card-body">
           <form #regForm="ngForm" (ngSubmit)="registerUser(regForm)" class="form" novalidate>
@@ -34,7 +41,7 @@
               </span>
             </div>
             <div class="form-group" [class.has-error]="password.invalid && password.touched">
-              <label for="password" class="control-label">Password</label>
+              <label for="password" class="control-label" >Password (Should be &gt; than 8 characters &amp; contain a number)</label>
               <input required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" id="password" type="password"
                 class="form-control" name="password" [(ngModel)]="registerUserData.password" #password="ngModel">
               <span class="help-block" *ngIf="password.errors?.required && password.touched">
@@ -60,11 +67,10 @@
 
             <div>
 
-              <input  id="adminUser" type="checkbox"
-               name="adminUser" [(ngModel)]="registerUserData.adminUser"
+              <input id="adminUser" type="checkbox" name="adminUser" [(ngModel)]="registerUserData.adminUser"
                 #userType="ngModel">
-                <div class="divider"></div>
-                <label for="adminUser">Admin User</label>
+              <div class="divider"></div>
+              <label for="adminUser">Admin User</label>
 
 
 
